Added ReloadRadar console command (only if Console Commands mod is enabled)
Battle progress renderer changes:
 - Allies have their own section of the bar
Combat ship renderer changes:
 - Allied ships have their own color
New campaign renderer: NebulaRenderer
 - Handles nebula and deep hyperspace, does not show hyperspace storms yet
New renderer: MemoryUsageRenderer
 - Shows percentage of committed memory used (not percentage of allocatable)
 - Disabled by default, enable in the relevant CSVs in data/config/radar
New utility class: SpriteBatch
 - Aids in efficiently drawing a sprite many times in a row
Miscellaneous optimizations and improvements

 2.1 (November 19, 2015)
=========================
(thanks to MesoTroniK for spritework and extensive help testing new features)
Updated to be compatible with Starsector 0.7a
The "maxShown" setting has been enabled for all renderers, defaults increased
Added "verticesPerCircle" setting, increase this for smoother radar rings
Asteroid renderer (both campaign and combat) changes:
 - Uses a sprite now, should look much smoother
 - Scaled based on their true size, not a flat value multiplied by zoom level
Campaign fleet renderer changes:
 - Uses a sprite now, should look much smoother
 - Unknown (transponder off) contacts are shown in neutral colors
 - Fixed issue where player fleet would flash bounty colors if a faction was
   paying for kills against their enemies and was hostile towards the player
Planet renderer changes:
 - Uses vanilla map icons instead of polygons
 - Differentiates between planets and stars
Battle objective renderer changes:
 - Fixed pop-in issue when objective is at the very edge of radar
 - Added a slight tinge to the center of the objective diamond
 - Changed render order to be drawn below other combat entities
Combat readiness renderer changes:
 - Bar is dimmed until you have started losing combat readiness
 - Remaining peak CR timer is shown as a white line down the middle of the bar