@@ -11,23 +11,24 @@ import static org.lwjgl.opengl.GL11.*;
 
 public abstract class BaseMemoryUsageRenderer
 {
+    private static final boolean SHOW_NONHEAP = true;
     private MemoryMXBean memory;
     private Vector2f barLocation;
-    private float barWidth, barHeight, halfWidth,
+    private float barWidth, barHeight, barOffset,
             heapUsedFraction = 0f, heapCommitFraction = 0f,
             nonHeapUsedFraction = 0f, nonHeapCommitFraction = 0f;
 
-    protected void initiate(CommonRadar radar)
+    protected void init(CommonRadar radar, float extraPaddingLeft)
     {
         final Vector2f radarCenter = radar.getRenderCenter();
         final float radarRadius = radar.getRenderRadius();
 
         // Location and size of bar on the screen
-        barWidth = radarRadius * .045f;
-        halfWidth = barWidth * 0.5f;
+        barWidth = radarRadius * .09f * (SHOW_NONHEAP ? .5f : 1f);
+        barOffset = (SHOW_NONHEAP ? barWidth * 0.66f : 0f);
         barHeight = radarRadius * 2f;
-        barLocation = new Vector2f(radarCenter.x - (radarRadius * 1.15f) - (barWidth * 2f),
-                radarCenter.y - radarRadius);
+        barLocation = new Vector2f(((radarCenter.x - (radarRadius * 1.15f))
+                - barWidth) - extraPaddingLeft, radarCenter.y - radarRadius);
 
         memory = ManagementFactory.getMemoryMXBean();
     }
@@ -36,9 +37,8 @@ public abstract class BaseMemoryUsageRenderer
     {
         if (isUpdateFrame)
         {
-            final MemoryUsage heap = memory.getHeapMemoryUsage(),
-                    nonHeap = memory.getNonHeapMemoryUsage();
-            final double maxHeapMemory = heap.getMax(), maxNonHeapMemory = nonHeap.getMax();
+            final MemoryUsage heap = memory.getHeapMemoryUsage();
+            final double maxHeapMemory = heap.getMax();
             if (maxHeapMemory == -1)
             {
                 heapUsedFraction = (float) (heap.getUsed() / (double) heap.getCommitted());
@@ -50,15 +50,20 @@ public abstract class BaseMemoryUsageRenderer
                 heapCommitFraction = (float) (heap.getCommitted() / maxHeapMemory);
             }
 
-            if (maxNonHeapMemory == -1)
+            if (SHOW_NONHEAP)
             {
-                nonHeapUsedFraction = (float) (nonHeap.getUsed() / (double) nonHeap.getCommitted());
-                nonHeapCommitFraction = 1f;
-            }
-            else
-            {
-                nonHeapUsedFraction = (float) (nonHeap.getUsed() / maxNonHeapMemory);
-                nonHeapCommitFraction = (float) (nonHeap.getCommitted() / maxNonHeapMemory);
+                final MemoryUsage nonHeap = memory.getNonHeapMemoryUsage();
+                final double maxNonHeapMemory = nonHeap.getMax();
+                if (maxNonHeapMemory == -1)
+                {
+                    nonHeapUsedFraction = (float) (nonHeap.getUsed() / (double) nonHeap.getCommitted());
+                    nonHeapCommitFraction = 1f;
+                }
+                else
+                {
+                    nonHeapUsedFraction = (float) (nonHeap.getUsed() / maxNonHeapMemory);
+                    nonHeapCommitFraction = (float) (nonHeap.getCommitted() / maxNonHeapMemory);
+                }
             }
         }
 
@@ -68,30 +73,33 @@ public abstract class BaseMemoryUsageRenderer
         // Heap memory
         // Used
         glColor(Color.WHITE);
-        glVertex2f(barLocation.x - halfWidth, barLocation.y);
-        glVertex2f(barLocation.x - halfWidth, barLocation.y + (barHeight * heapUsedFraction));
+        glVertex2f(barLocation.x - barOffset, barLocation.y);
+        glVertex2f(barLocation.x - barOffset, barLocation.y + (barHeight * heapUsedFraction));
         // Committed
         glColor(Color.GRAY);
-        glVertex2f(barLocation.x - halfWidth, barLocation.y + (barHeight * heapUsedFraction));
-        glVertex2f(barLocation.x - halfWidth, barLocation.y + (barHeight * heapCommitFraction));
+        glVertex2f(barLocation.x - barOffset, barLocation.y + (barHeight * heapUsedFraction));
+        glVertex2f(barLocation.x - barOffset, barLocation.y + (barHeight * heapCommitFraction));
         // Unused, uncommitted
         glColor(Color.DARK_GRAY);
-        glVertex2f(barLocation.x - halfWidth, barLocation.y + (barHeight * heapCommitFraction));
-        glVertex2f(barLocation.x - halfWidth, barLocation.y + barHeight);
+        glVertex2f(barLocation.x - barOffset, barLocation.y + (barHeight * heapCommitFraction));
+        glVertex2f(barLocation.x - barOffset, barLocation.y + barHeight);
 
-        // Non-heap memory
-        // Used
-        glColor(Color.WHITE);
-        glVertex2f(barLocation.x + halfWidth, barLocation.y);
-        glVertex2f(barLocation.x + halfWidth, barLocation.y + (barHeight * nonHeapUsedFraction));
-        // Committed
-        glColor(Color.GRAY);
-        glVertex2f(barLocation.x + halfWidth, barLocation.y + (barHeight * nonHeapUsedFraction));
-        glVertex2f(barLocation.x + halfWidth, barLocation.y + (barHeight * nonHeapCommitFraction));
-        // Unused, uncommitted
-        glColor(Color.DARK_GRAY);
-        glVertex2f(barLocation.x + halfWidth, barLocation.y + (barHeight * nonHeapCommitFraction));
-        glVertex2f(barLocation.x + halfWidth, barLocation.y + barHeight);
+        if (SHOW_NONHEAP)
+        {
+            // Non-heap memory
+            // Used
+            glColor(Color.WHITE);
+            glVertex2f(barLocation.x + barOffset, barLocation.y);
+            glVertex2f(barLocation.x + barOffset, barLocation.y + (barHeight * nonHeapUsedFraction));
+            // Committed
+            glColor(Color.GRAY);
+            glVertex2f(barLocation.x + barOffset, barLocation.y + (barHeight * nonHeapUsedFraction));
+            glVertex2f(barLocation.x + barOffset, barLocation.y + (barHeight * nonHeapCommitFraction));
+            // Unused, uncommitted
+            glColor(Color.DARK_GRAY);
+            glVertex2f(barLocation.x + barOffset, barLocation.y + (barHeight * nonHeapCommitFraction));
+            glVertex2f(barLocation.x + barOffset, barLocation.y + barHeight);
+        }
 
         glEnd();
     }
